srv/openproject/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproject
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: openproject-openproject
