srv/openproject/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: openproject
spec:
  tls:
    - hosts:
        - openproject.sj.ifsc.edu.br
      secretName: tls-ifsc-sje
  rules:
    - host: openproject.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: openproject
              servicePort: 80
